# api/controller/app_controller.go
@@ -1,11 +1,12 @@
 package controller
 
 type App struct {
-	User      interface{ UserController }
-	Frontend  FrontendController
-	Session   SessionController
-	Lifecycle LifecycleController
-	Project   ProjectController
-	Branch    BranchController
-	Pipeline  PipelineController
+	User      interface{ User } `validate:"required"`
+	Frontend  Frontend          `validate:"required"`
+	Lifecycle Lifecycle         `validate:"required"`
+	Project   Project           `validate:"required"`
+	Branch    Branch            `validate:"required"`
+	Pipeline  Pipeline          `validate:"required"`
+	Session   Session           `validate:"required"`
+	JWT       JWT               `validate:"required"`
 }
