# api/controller/frontend_controller.go
@@ -8,7 +8,7 @@ import (
 )
 
 // serve embedded frontend files
-type FrontendController interface {
+type Frontend interface {
 	Serve(context *fiber.Ctx) error
 	ServeSwagger(context *fiber.Ctx) error
 }
@@ -18,10 +18,10 @@ type frontendController struct {
 	swaggerController    func(context *fiber.Ctx) error
 }
 
-func NewFrontendController(
+func NewFrontend(
 	frontendFilesystem http.FileSystem,
 	swaggerFilesystem http.FileSystem,
-) FrontendController {
+) Frontend {
 	return &frontendController{
 		filesystemController: filesystem.New(filesystem.Config{
 			Root:         frontendFilesystem,
@@ -34,6 +34,16 @@ func NewFrontendController(
 	}
 }
 
+// get the current OpenAPI schema
+// @Summary get the current OpenAPI schema
+// @Description get the current OpenAPI schema
+// @ID get-openapi
+// @Tags openapi
+// @Security ApiKeyAuth
+//
+// @Success 200 {object} map[string]any
+// @Failure 500 {object} presenter.ResponseError
+// @Router /api/v1/swagger/swagger.json [PUT]
 func (controller *frontendController) ServeSwagger(context *fiber.Ctx) error {
 	return controller.swaggerController(context)
 }
